(PC-20023)[PRO] fix: venue label alignment and icon set to baseline

--- a/pro/src/pages/Home/Venues/Venue.scss
+++ b/pro/src/pages/Home/Venues/Venue.scss
@@ -48,6 +48,8 @@
     border: none;
 
     .h-card-title-ico {
+      display: flex;
+      align-self: baseline;
       margin-left: 0;
       margin-right: rem.torem(8px);
 
@@ -59,10 +61,12 @@
     }
 
     .title-text {
-      display: block;
+      display: flex;
+      align-self: baseline;
       margin-right: rem.torem(16px);
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: left;
 
       &:hover {
         text-decoration: underline;
